--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -13,6 +13,8 @@
     "\n",
     "_Instructions:_ There are four questions, worth a total of 100 points. In addition, there are two bonus questions (Q2e and Q4c), each worth 5 points. Insert your answer after each question in the designated box. Replace comments with code.\n",
     "\n",
+    "Hand in your work by emailing the Jupyter notebook (please rename as \"LASTNAME_FIRSTNAME.ipynb\") to Anusri and myself.\n",
+    "\n",
     "---"
    ]
   },
