HW4 df_removed_cells

--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -235,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### _Q1d:_ Based on the above plot, we decide to exclude the six cells with a total read count of less than 30,000,000 reads. Which six cells are excluded? [4 points]"
+    "### _Q1d:_ Based on the above plot, we decide to exclude the six cells with a total read count of less than 3,000,000 reads. Which six cells are excluded? [4 points]"
    ]
   },
   {
@@ -253,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: insert code to filter down to cells with less 300,000 reads\n",
+    "# TODO: insert code to filter down to cells with less 3,000,000 reads\n",
     "df_removed_cells = None"
    ]
   },
@@ -354,6 +354,15 @@
    "outputs": [],
    "source": [
     "df_norm = pd.read_table(\"data_filtered_normalized.tsv\", sep=\"\\t\", index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_norm.head()"
    ]
   },
   {
