--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -429,9 +429,9 @@
    "metadata": {},
    "source": [
     "_Answer:_ \n",
-    "* min: XXX\n",
-    "* median: XXX\n",
-    "* max: XXX"
+    "* min: 501688 \n",
+    "* median: 514870 \n",
+    "* max: 35387248"
    ]
   },
   {
@@ -461,20 +461,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chr1\n",
+      "chr2\n",
+      "chr3\n",
+      "chr4\n",
+      "chr5\n",
+      "chr6\n",
+      "chr7\n",
+      "chr8\n",
+      "chr9\n",
+      "chr10\n",
+      "chr11\n",
+      "chr12\n",
+      "chr13\n",
+      "chr14\n",
+      "chr15\n",
+      "chr16\n",
+      "chr17\n",
+      "chr18\n",
+      "chr19\n",
+      "chr20\n",
+      "chr21\n",
+      "chr22\n",
+      "chrX\n",
+      "chrY\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: write code here to print unique list of values in 'CHR' column"
+    "# TODO: write code here to print unique list of values in 'CHR' column\n",
+    "# print(df[df['CHR'] == \" \"])\n",
+    "# print(df.loc[len(df)-1])\n",
+    "last = \"\"\n",
+    "#allosome \n",
+    "for chrom in df['CHR']:\n",
+    "    if chrom != last:\n",
+    "        print(chrom)\n",
+    "        last = chrom"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Answer:_ male/female"
+    "_Answer:_ male, have x and y"
    ]
   },
   {
@@ -487,23 +524,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['chr1' 'chr2' 'chr3' 'chr4' 'chr5' 'chr6' 'chr7' 'chr8' 'chr9' 'chr10'\n",
+      " 'chr11' 'chr12' 'chr13' 'chr14' 'chr15' 'chr16' 'chr17' 'chr18' 'chr19'\n",
+      " 'chr20' 'chr21' 'chr22']\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: insert code to generate a list of chromosome labels corresponding to autosomes, e.g. ['chr1', 'chr2', ...]\n",
-    "autosomes = None"
+    "autosomes = df['CHR'].unique() #df[(df['CHR'] != \"chrX\") | (df['CHR'] != \"chrY\")]\n",
+    "autosomes = autosomes[:-2]\n",
+    "print(autosomes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4718"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(df[df['CHR'].isin(autosomes)])"
    ]
@@ -512,12 +568,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Answer:_ XXX bins"
+    "_Answer:_ 4718 bins"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -536,11 +592,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000002BE5EDC60B8>]], dtype=object)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAEbCAYAAAAh9sTfAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAF7FJREFUeJzt3X+QXWd93/H3B1uAy4LoxO7GyALR\n4NIkaPjhrWHCtLNrSDAY7M7UpHLMD1FTQQoEGDNFZDKm0B9xQhwmFBpXjQ02UC9gEqJYBsoAi6Gp\nHSTXWBYCIkCAZGJjG8ssGBPV3/5xr2G1u9L9sWd1l7Pv18yO7j3nuc/5nmef/ezZo3PvSVUhSWqX\nh426AElS8wx3SWohw12SWshwl6QWMtwlqYUMd0lqIcNdWoIk70vyn0ZdhzSf4a7WS7I/yXObbiut\nZIa7JLWQ4a5WS/J+4PHAXyWZTfLvk5ybZE+Se5PMJPnlo7XtLv9Ikr9LcijJDUl+dXR7JPXHcFer\nVdVLgW8DL6qqMeBjwDXAG4BTgOvphPnD57etqj/sdvNx4HTgHwE3Ax88zrshDcxw12rzr4EdVfWp\nqvp74I+Ak4BfO9oLqurKqvpBVT0A/AfgqUnWHpdqpSEZ7lptHgd866EnVfUg8B1g3WKNk5yQ5NIk\nX09yH7C/u+rk5S5UWgrDXavB3I8+vR14wkNPkgRYDxxcpC3AbwHnAc8F1gIbHnrpchQqNcVw12pw\nB/CPu48/DJyT5DlJ1gAXAw8Af71IW4BHd9ffDfwD4L8cl4qlJTLctRr8PvB7Se4FXgS8BPivwF3d\n5y+qqp/Mb5vkTcDVdE7jHAS+DNx4vIuXhhFv1iFJ7eORuyS1kOEuSS1kuEtSCxnuktRCJ45qwyef\nfHJt2LBhVJtf1A9/+EMe9ahHjbqMFcUxWcgxOZLjsdByjsmuXbvuqqpTerUbWbhv2LCBnTt3jmrz\ni5qZmWFycnLUZawojslCjsmRHI+FlnNMknyrdytPy0hSKxnuktRChrsktZDhLkktZLhLUgsZ7pLU\nQn2He/emBf83yXWLrHtEkg8l2ZfkpiQbmixSkjSYQY7cXw/sPcq6i4DvV9WTgHcCf7DUwiRJw+sr\n3JOcBpwD/NlRmpwHXNV9fC3wnO4dbiRJI9DX57knuZbOTQweDbypql44b/1twNlVdaD7/OvAM6vq\nrnnttgBbAMbHx8+Ynp5uZCeaMjs7y9jY2KjLWFEck4UckyMtdTx2HzzUYDWwcd3o712+nHNkampq\nV1VN9GrX8+MHkrwQuLOqdiWZPFqzRZYt+K1RVduAbQATExO10t6y7NuoF3JMFnJMjrTU8di8dUdz\nxQD7L5xstL9hrIQ50s9pmWcD5ybZD0wDZyX5wLw2B+jcZJgkJ9K5kfA9DdYpSRpAz3CvqrdU1WlV\ntQHYBHymql4yr9l24OXdx+d323j/PkkakaE/FTLJ24GdVbUduAJ4f5J9dI7YNzVUnyRpCAOFe1XN\nADPdx5fMWf5j4MVNFiZJGp7vUJWkFjLcJamFDHdJaiHDXZJayHCXpBYy3CWphQx3SWohw12SWshw\nl6QWMtwlqYUMd0lqIcNdklrIcJekFjLcJamFDHdJaiHDXZJaqGe4J3lkkr9J8qUke5K8bZE2m5N8\nL8kt3a9XLk+5kqR+9HMnpgeAs6pqNska4AtJPl5VN85r96Gqem3zJUqSBtUz3Ls3up7tPl3T/fLm\n15K0gvV1zj3JCUluAe4EPlVVNy3S7F8luTXJtUnWN1qlJGkg6RyY99k4eSzwF8Drquq2Oct/AZit\nqgeSvBr4zao6a5HXbwG2AIyPj58xPT291PobNTs7y9jY2KjLWFEck4UckyMtdTx2HzzUYDWwcd3a\nRvsbxnLOkampqV1VNdGr3UDhDpDkrcAPq+qPjrL+BOCeqjrmCE9MTNTOnTsH2vZym5mZYXJyctRl\nrCiOyUKOyZGWOh4btu5orhhg/6XnNNrfMJZzjiTpK9z7uVrmlO4RO0lOAp4LfGVem1PnPD0X2DtY\nuZKkJvVztcypwFXdI/KHAR+uquuSvB3YWVXbgd9Jci5wGLgH2LxcBUuSeuvnaplbgacvsvySOY/f\nAryl2dIkScPyHaqS1EKGuyS1kOEuSS1kuEtSCxnuktRChrsktZDhLkktZLhLUgsZ7pLUQoa7JLWQ\n4S5JLWS4S1ILGe6S1EKGuyS1kOEuSS1kuEtSCxnuktRC/dxD9ZFJ/ibJl5LsSfK2Rdo8IsmHkuxL\nclOSDctRrCSpP/0cuT8AnFVVTwWeBpyd5Fnz2lwEfL+qngS8E/iDZsuUJA2iZ7hXx2z36ZruV81r\ndh5wVffxtcBzkqSxKiVJA+nrnHuSE5LcAtwJfKqqbprXZB3wHYCqOgwcAn6hyUIlSf1L1fyD8GM0\nTh4L/AXwuqq6bc7yPcDzqupA9/nXgTOr6u55r98CbAEYHx8/Y3p6eul70JDdBw8xfhLccX8z/W1c\nt7aZjpbR7oOHerYZZEya3ud+6htEU/XNzs4yNjbWSF9tsNTxWKnf56VYzjkyNTW1q6omerU7cZBO\nq+reJDPA2cBtc1YdANYDB5KcCKwF7lnk9duAbQATExM1OTk5yOaX1eatO7h442Eu2z3QkBzV/gsn\nG+lnOW3euqNnm0HGpOl97qe+QTRV38zMDCtp7o7aUsdjpX6fl2IlzJF+rpY5pXvETpKTgOcCX5nX\nbDvw8u7j84HP1CB/EkiSGtXPIdmpwFVJTqDzy+DDVXVdkrcDO6tqO3AF8P4k++gcsW9atoolST31\nDPequhV4+iLLL5nz+MfAi5stTZI0LN+hKkktZLhLUgsZ7pLUQoa7JLWQ4S5JLWS4S1ILGe6S1EKG\nuyS1kOEuSS1kuEtSCxnuktRChrsktZDhLkktZLhLUgsZ7pLUQoa7JLWQ4S5JLdTPPVTXJ/lskr1J\n9iR5/SJtJpMcSnJL9+uSxfqSJB0f/dxD9TBwcVXdnOTRwK4kn6qqL89r9/mqemHzJUqSBtXzyL2q\nvltVN3cf/wDYC6xb7sIkScNLVfXfONkA3AA8parum7N8EvgocAC4HXhTVe1Z5PVbgC0A4+PjZ0xP\nTy+h9GbtPniI8ZPgjvub6W/jurXNdLSMdh881LPNIGPS9D73U98gmqpvdnaWsbGxRvpqg6WOx0r9\nPi/Fcs6RqampXVU10atd3+GeZAz4HPCfq+rP5617DPBgVc0meQHwJ1V1+rH6m5iYqJ07d/a17eNh\nw9YdXLzxMJft7udMVW/7Lz2nkX6W04atO3q2GWRMmt7nfuobRFP1zczMMDk52UhfbbDU8Vip3+el\nWM45kqSvcO/rapkka+gcmX9wfrADVNV9VTXbfXw9sCbJyQPWLElqSD9XywS4AthbVX98lDa/2G1H\nkjO7/d7dZKGSpP718/f2s4GXAruT3NJd9rvA4wGq6nLgfOC3kxwG7gc21SAn8yVJjeoZ7lX1BSA9\n2rwbeHdTRUmSlsZ3qEpSCxnuktRChrsktZDhLkktZLhLUgsZ7pLUQoa7JLWQ4S5JLWS4S1ILGe6S\n1EKGuyS1kOEuSS1kuEtSCxnuktRChrsktZDhLkktZLhLUgv1cw/V9Uk+m2Rvkj1JXr9ImyR5V5J9\nSW5N8ozlKVeS1I9+7qF6GLi4qm5O8mhgV5JPVdWX57R5PnB69+uZwJ92/5UkjUDPI/eq+m5V3dx9\n/ANgL7BuXrPzgKur40bgsUlObbxaSVJfUlX9N042ADcAT6mq++Ysvw64tHszbZJ8GnhzVe2c9/ot\nwBaA8fHxM6anp4cqevfBQ0O9rpfxk+CO+5vpa+O6tc10tIz6GcdBxqTpfW76+9xUfbOzs4yNjTXS\n13wrdZ+PZanjsdL3eZj6ev3cLKXGqampXVU10atdP6dlAEgyBnwUeMPcYH9o9SIvWfBbo6q2AdsA\nJiYmanJyst/NH2Hz1h1Dva6Xizce5rLdfQ/JMe2/cLKRfpZTP+M4yJg0vc9Nf5+bqm9mZoZh524v\nK3Wfj2Wp47HS93mY+nr93ByP70tfV8skWUMn2D9YVX++SJMDwPo5z08Dbl96eZKkYfRztUyAK4C9\nVfXHR2m2HXhZ96qZZwGHquq7DdYpSRpAP39vPxt4KbA7yS3dZb8LPB6gqi4HrgdeAOwDfgS8ovlS\nJUn96hnu3f8kXeyc+tw2BbymqaIkSUvjO1QlqYUMd0lqIcNdklrIcJekFjLcJamFDHdJaiHDXZJa\nyHCXpBYy3CWphQx3SWohw12SWshwl6QWMtwlqYUMd0lqIcNdklrIcJekFjLcJamF+rmH6pVJ7kxy\n21HWTyY5lOSW7tclzZcpSRpEP/dQfR/wbuDqY7T5fFW9sJGKJElL1vPIvapuAO45DrVIkhqSzr2t\nezRKNgDXVdVTFlk3CXwUOADcDrypqvYcpZ8twBaA8fHxM6anp4cqevfBQ0O9rpfxk+CO+5vpa+O6\ntc10tIz6GcdBxqTpfW76+9xUfbOzs4yNjTXS13wrdZ+PZanjsdL3eZj6ev3cLKXGqampXVU10atd\nE+H+GODBqppN8gLgT6rq9F59TkxM1M6dO3tuezEbtu4Y6nW9XLzxMJft7udMVW/7Lz2nkX6WUz/j\nOMiYNL3PTX+fm6pvZmaGycnJRvqab6Xu87EsdTxW+j4PU1+vn5ul1Jikr3Bf8tUyVXVfVc12H18P\nrEly8lL7lSQNb8nhnuQXk6T7+Mxun3cvtV9J0vB6/r2d5BpgEjg5yQHgrcAagKq6HDgf+O0kh4H7\ngU3Vz7keSdKy6RnuVXVBj/XvpnOppCRphfAdqpLUQoa7JLWQ4S5JLWS4S1ILGe6S1EKGuyS1kOEu\nSS1kuEtSCxnuktRChrsktZDhLkktZLhLUgsZ7pLUQoa7JLWQ4S5JLWS4S1ILGe6S1EI9wz3JlUnu\nTHLbUdYnybuS7Etya5JnNF+mJGkQ/Ry5vw84+xjrnw+c3v3aAvzp0suSJC1Fz3CvqhuAe47R5Dzg\n6uq4EXhsklObKlCSNLhUVe9GyQbguqp6yiLrrgMuraovdJ9/GnhzVe1cpO0WOkf3jI+PnzE9PT1U\n0bsPHhrqdb2MnwR33L8sXf/catOYbFy3tpF+ZmdnGRsbA5ZvLq5k88dx7ngMo41j2OvnZilzcWpq\naldVTfRqd+LQW/iZLLJs0d8YVbUN2AYwMTFRk5OTQ21w89YdQ72ul4s3Huay3U0MSXu0aUz2XzjZ\nSD8zMzM8NHeXay6uZPPHce54DKONY9jr56apuXgsTVwtcwBYP+f5acDtDfQrSRpSE+G+HXhZ96qZ\nZwGHquq7DfQrSRpSz7+3k1wDTAInJzkAvBVYA1BVlwPXAy8A9gE/Al6xXMVKkvrTM9yr6oIe6wt4\nTWMVSZKWzHeoSlILGe6S1EKGuyS1kOEuSS1kuEtSCxnuktRChrsktZDhLkktZLhLUgsZ7pLUQoa7\nJLWQ4S5JLWS4S1ILGe6S1EKGuyS1kOEuSS1kuEtSC/UV7knOTvLVJPuSbF1k/eYk30tyS/frlc2X\nKknqVz/3UD0BeA/w68AB4ItJtlfVl+c1/VBVvXYZapQkDaifI/czgX1V9Y2q+gkwDZy3vGVJkpYi\nnftbH6NBcj5wdlW9svv8pcAz5x6lJ9kM/D7wPeBrwBur6juL9LUF2AIwPj5+xvT09FBF7z54aKjX\n9TJ+Etxx/7J0/XOrTWOycd3aRvqZnZ1lbGwMWL65uJLNH8e54zGMNo5hr5+bpczFqampXVU10atd\nz9MyQBZZNv83wl8B11TVA0leDVwFnLXgRVXbgG0AExMTNTk52cfmF9q8dcdQr+vl4o2HuWx3P0Oy\nerRpTPZfONlIPzMzMzw0d5drLq5k88dx7ngMo41j2Ovnpqm5eCz9nJY5AKyf8/w04Pa5Darq7qp6\noPv0fwBnNFOeJGkY/YT7F4HTkzwxycOBTcD2uQ2SnDrn6bnA3uZKlCQNquff21V1OMlrgU8CJwBX\nVtWeJG8HdlbVduB3kpwLHAbuATYvY82SpB76OplaVdcD189bdsmcx28B3tJsaZKkYfkOVUlqIcNd\nklrIcJekFjLcJamFDHdJaiHDXZJayHCXpBYy3CWphQx3SWohw12SWshwl6QWMtwlqYUMd0lqIcNd\nklrIcJekFjLcJamFDHdJaqG+wj3J2Um+mmRfkq2LrH9Ekg9119+UZEPThUqS+tcz3JOcALwHeD7w\nK8AFSX5lXrOLgO9X1ZOAdwJ/0HShkqT+9XPkfiawr6q+UVU/AaaB8+a1OQ+4qvv4WuA5SdJcmZKk\nQaSqjt0gOR84u6pe2X3+UuCZVfXaOW1u67Y50H3+9W6bu+b1tQXY0n36ZOCrTe1IQ04G7urZanVx\nTBZyTI7keCy0nGPyhKo6pVejE/voaLEj8Pm/EfppQ1VtA7b1sc2RSLKzqiZGXcdK4pgs5JgcyfFY\naCWMST+nZQ4A6+c8Pw24/WhtkpwIrAXuaaJASdLg+gn3LwKnJ3likocDm4Dt89psB17efXw+8Jnq\ndb5HkrRsep6WqarDSV4LfBI4AbiyqvYkeTuws6q2A1cA70+yj84R+6blLHoZrdhTRiPkmCzkmBzJ\n8Vho5GPS8z9UJUk/f3yHqiS1kOEuSS1kuEtSCxnuOqYkzxh1DVrZkpw86hq0kP+hqp9aJMgD/CXw\nIjpz5ebjX9XKkeQxwOnAN6rq+6OuZxSSPB/4b8BB4HXAB4BHAo8AXl5Vnx5heZpj1YZ7kvXAO4B1\nwMeBd1TV33fXfayq/uUo6xuFJA8CNwIPzFn8rO6yqqqzRlLYiCT5APCGqroryfOAP6PzkRmnA2+q\nqo+MtMARSHILcAHwWOA64JyqujHJLwMfrKpV+5deknE6eVLA7VV1xyjr6efjB9rqSuCjdILrIuBz\nSV5UVXcDTxhpZaPzm3SOxt5RVdcDJPlmVU2NtqyReeqcz0d6K/DPq2p/9zTEp4FVF+7Ag1W1FyDJ\nj6rqRoCq2ptkVZ7mTfI04HI678w/2F18WpJ7gX83qr94V3O4n1JVl3cfvy7JS4AbkpzLIp+LsxpU\n1bVJPgH8xySvAC5mlY5F18OSPKaq7gMeBL4N0D2SX60/O/cmeRXwGOD7Sd4IfBh4LjA70spG533A\nq6rqprkLkzwLeC/w1FEUtVonKMCaJI+sqh8DVNUHkvwdnXfiPmq0pY1OVc0Cb+wejVwFjI24pFF6\nG/DZJO8B/jfwkSR/CZwFfGKklY3Oy4Hfo/PL7jfonKL5JPAt4N+OsK5RetT8YAfonq4aWZas5nPu\nbwRurqrPzVv+dOAPq+rXR1PZytH9TP5Hd49cV6UkT6ITWv+EzsHQAeBjVfXJkRamFSPJu4BfAq4G\nvtNdvB54GfDNuR+PflzrWq3hrsEkeWFVXTfqOrRyreY50r2K6Dw6/6EaOgcB2x/6v6tRWM2nZY5q\nNU/SY/hndK6OEM6Ro1i1c6SqPk7nqrsVw3Bf3KqdpEn+KT87Aik6n92/vareOtLCVh7niHOkpyRb\nujcpOv7bXs2nZY4xSfeOtLARSfJmOv9BNk3nz0ro3JxlEzBdVZeOqrZRcY4cyTkymCSvqqr/PpJt\nr9Zwd5IulORrwK8+9GauOcsfDuypqtNHU9loOEcWco4MJskrquq9I9n2Kg53J+k8Sb4CPK+qvjVv\n+ROA/1VVTx5NZaPhHFnIOTKYJN+uqsePYtur+Zz7g8Dj6FyfO9ep3XWr0RuATyf5W352SdfjgScB\nI7mca8ScIws5R+ZJcuvRVgHjx7OWIza+io/czwbeDSw6SatqVb5JpfsW8jM58pKuL1bV/xtpYSPg\nHFmcc+RISe4AngfM/zC5AH9dVY87/lWt4nAHJ6l6c46olyRXAO+tqi8ssu5/VtVvjaCs1R3uktRW\nq/JT3CSp7Qx3SToOklyZ5M4kt/XR9p1Jbul+fa378cGDbc/TMpK0/JL8Czofi3x1VT1lgNe9Dnh6\nVf2bQbbnkbskHQdVdQNwz9xlSX4pySeS7Ery+e47oue7ALhm0O2t5uvcJWnUtgGvrqq/TfJMOven\n/entLLtvDnsi8JlBOzbcJWkEkowBv0bnJjAPLX7EvGabgGuHufTWcJek0XgYcG9VPe0YbTYBrxm2\nc0nScda9w9k3k7wYOnc+S/LT+60meTLwD4H/M0z/hrskHQdJrqET1E9OciDJRcCFwEVJvgTsofPx\n0g+5gM6njw51SaOXQkpSC3nkLkktZLhLUgsZ7pLUQoa7JLWQ4S5JLWS4S1ILGe6S1EL/H6cm5Xsh\n7LApAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2be5edb8a58>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "df_total_reads = pd.DataFrame.from_records([(cell, int(df[cell].sum())) for cell in cells], columns=['cell', 'total'])\n",
     "df_total_reads.hist(column=\"total\", bins=15, xrot=90)"
